Fixed drawer layout bug.

--- a/global.css
+++ b/global.css
@@ -73,10 +73,10 @@ body {
 
 .yo {
 
-	/*display: -ms-flexbox;
+	display: -ms-flexbox;
 	display: -webkit-flex;
-	display: flex;*/
-	display: none;
+	display: flex;
+	/*display: none;*/
 	/*justify-content: center;*/
 
 	flex-direction: column;
@@ -87,7 +87,8 @@ body {
 
 	animation: .4s ease-out 0s 1 zoomIn;
 
-	width: 60%;
+	/*width: 60%;*/
+	width: 0;
 	padding-right: 5px;
 	padding-left: 1%;
 
@@ -106,6 +107,8 @@ body {
 
 	box-shadow: 2.5px 0 15px 0 #888888;
 	background: #efebe9;
+
+	/*position: fixed;*/
 }
 
 .yo div img {
